@@ -1801,7 +1801,6 @@ int	is_ip4(const char *ip)
 	return res;
 }
 
-#ifdef HAVE_IPV6
 /******************************************************************************
  *                                                                            *
  * Function: is_ip6                                                           *
@@ -1868,7 +1867,6 @@ int	is_ip6(const char *ip)
 
 	return res;
 }
-#endif	/* HAVE_IPV6 */
 
 /******************************************************************************
  *                                                                            *
